Fixed overflowing problems and added scrollbars

--- a/src/app/bot-small/bot-small.component.less
+++ b/src/app/bot-small/bot-small.component.less
@@ -7,6 +7,7 @@
   background-color: @background-primary;
   border-radius: @padding-md;
   cursor: pointer;
+  max-width: 100%;
 }
 
 :host(.selected) {
