--- a/src/app/chat/chat.component.less
+++ b/src/app/chat/chat.component.less
@@ -3,16 +3,19 @@
 :host {
   flex: 1;
   display: flex;
+  min-width: 0;
 }
 
 .main {
   flex: 1;
+  min-width: 0;
   display: flex;
   flex-direction: column;
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
   -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
   z-index: 1;
+  max-height: 100%;
 }
 
 .top {
@@ -21,6 +24,7 @@
   padding: 0 @padding-md;
   align-items: center;
   border-bottom: solid @border-color-primary 2px;
+  min-height: 70px;
   height: 70px;
 }
 
